--- a/.eslinrc.json
+++ b/.eslinrc.json
@@ -10,7 +10,7 @@
     },
     "plugins": ["react", "prettier"],
     "rules": {
-      "prettier/prettier": "error",
+      "prettier/prettier": "warn",
       "react/react-in-jsx-scope": "off",
       "react/function-component-definition": [
         "error",
@@ -32,5 +32,12 @@
           "allowTernary": true
         }
       ]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": ["./"]
+        }
+      }
     }
   }
