--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "new-react-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@apollo/client": "^3.7.11",
+    "@apollo/client": "^3.7.12",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "babel-eslint": "^10.1.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './**/*.{js,jsx}' --fix",
-    "prepare": "husky install"
+    "lint": "eslint './**/*.{js,jsx}' --fix"
   },
   "eslintConfig": {
     "extends": [
