--- a/.eslintrc
+++ b/.eslintrc
@@ -22,9 +22,9 @@
     "react/prop-types": 0,
     "arrow-body-style": 0,
     "no-console": [
-      "error",
+      "warn",
       {
-        "allow": ["warn", "error"]
+        "allow": ["warn"]
       }
     ],
     "no-unused-expressions": [
